--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,11 @@
 <!doctype html>
 <html lang="en" class="no-js">
   <head>
-    <title>Boilerplate webapp</title>
+    <title>Mesosphere DCOS Installer</title>
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="title" content ="Mesosphere DCOS">
+    <meta name="title" content="Mesosphere DCOS Installer">
     <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
@@ -15,7 +15,7 @@
   </head>
 
   <body>
-    <div id="application"></div>
+    <div id="application" class="flex-box flex-box-fit-height fill-height"></div>
 
     <script src="./index.js"></script>
   </body>
