Move assets to /templates directory and serve from there

--- a/src/index.html
+++ b/src/index.html
@@ -11,12 +11,12 @@
     <![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
-    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="./assets/index.css">
   </head>
 
   <body>
     <div id="application" class="flex-box flex-box-fit-height fill-height"></div>
 
-    <script src="./index.js"></script>
+    <script src="./assets/index.js"></script>
   </body>
 </html>
