--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,10 @@
     <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="./assets/index.css">
+    <link rel="shortcut icon" type="image/png" href="./assets/favicon.ico">
   </head>
 
   <body>
