--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,11 @@
 <!doctype html>
 <html lang="en" class="no-js">
   <head>
-    <title>Mesosphere DCOS Installer</title>
+    <title>DC/OS Installer</title>
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="title" content="Mesosphere DCOS Installer">
+    <meta name="title" content="DC/OS Installer">
     <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
